--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Order Form</title>
+    <title>Vantura</title>
     
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     
@@ -20,7 +20,7 @@
 <body>
 
     <!--Info header--->
-    <header class="text-bg-primary text-center fs-5 py-1">
+    <header class="text-bg-primary text-center fs-5 py-1 position-absolute">
         <p class="mb-0">Starta säsongen - upp till 50% rabatt på vårsäsong</p>
     </header>
 
